// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload List itemRender 1`] = `
<ul
  class="upload-list upload-list-text"
>
  <li
    class="upload-list-text-container"
  >
    <div
      class="custom-item-render"
    >
      <span>
        uid:-1 name: xyz.png status: removed url: https://github.com/EightfoldAI/octuple/blob/main/public/assets/NewIssue.png  1/2
      </span>
      <span
        class="custom-item-render-action-remove"
      >
        remove
      </span>
      <span
        class="custom-item-render-action-replace"
      >
        replace
      </span>
      <span
        class="custom-item-render-action-download"
      >
        download
      </span>
      <span
        class="custom-item-render-action-preview"
      >
        preview
      </span>
    </div>
  </li>
  <li
    class="upload-list-text-container"
  >
    <div
      class="custom-item-render"
    >
      <span>
        uid:-2 name: yyy.png status: removed url: https://github.com/EightfoldAI/octuple/blob/main/public/assets/NewIssue.png  2/2
      </span>
      <span
        class="custom-item-render-action-remove"
      >
        remove
      </span>
      <span
        class="custom-item-render-action-replace"
      >
        replace
      </span>
      <span
        class="custom-item-render-action-download"
      >
        download
      </span>
      <span
        class="custom-item-render-action-preview"
      >
        preview
      </span>
    </div>
  </li>
</ul>
`;

exports[`Upload List should be uploading when upload a file 1`] = `
<span
  class=""
>
  <div
    class="upload upload-select"
  >
    <span
      class=""
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <ul
    class="upload-list upload-list-medium upload-list-text"
  >
    <li
      class="upload-list-text-container upload-animate-appear upload-animate-appear-start upload-animate"
      style="height: 0px; opacity: 0;"
    >
      <div
        class="upload-list-item upload-list-item-uploading upload-list-item-list-type-text"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <div
              class="upload-list-item-text-icon"
            >
              <span
                class="upload-spin-icon icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 14px; height: 14px;"
                  viewBox="0 0 24 24"
                >
                  <style>
                    @keyframes spin { from { transform: rotate(0deg) } to { transform: rotate(360deg) } }
                  </style>
                  <g
                    style="animation: spin linear 0.4s infinite; transform-origin: center;"
                  >
                    <path
                      d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
                      style="fill: currentColor;"
                    />
                    <rect
                      fill="transparent"
                      height="24"
                      width="24"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <span
              class="upload-list-item-name"
              title="foo.png"
            >
              foo.png
            </span>
            <span
              class="upload-list-item-card-actions"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
  </ul>
</span>
`;

exports[`Upload List should non-image format file preview 1`] = `
<span
  class=""
>
  <div
    class="upload upload-select"
  >
    <span
      class=""
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <ul
    class="upload-list upload-list-medium upload-list-picture"
  >
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail upload-list-item-file"
              href="https://cdn.xyz.com/aaa.zip"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 48px; height: 48px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23.5 17L18.5 22L15 18.5L16.5 17L18.5 19L22 15.5L23.5 17M13.09 20H6V4H13V9H18V13.09C18.33 13.04 18.66 13 19 13S19.67 13.04 20 13.09V8L14 2H6C4.89 2 4 2.9 4 4V20C4 21.11 4.89 22 6 22H13.81C13.46 21.39 13.21 20.72 13.09 20Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa.zip"
              rel="noopener noreferrer"
              target="_blank"
              title="not-image"
            >
              not-image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://cdn.xyz.com/aaa"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail upload-list-item-file"
              href="https://cdn.xyz.com/aaa.xx"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 48px; height: 48px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23.5 17L18.5 22L15 18.5L16.5 17L18.5 19L22 15.5L23.5 17M13.09 20H6V4H13V9H18V13.09C18.33 13.04 18.66 13 19 13S19.67 13.04 20 13.09V8L14 2H6C4.89 2 4 2.9 4 4V20C4 21.11 4.89 22 6 22H13.81C13.46 21.39 13.21 20.72 13.09 20Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa.xx"
              rel="noopener noreferrer"
              target="_blank"
              title="not-image"
            >
              not-image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail upload-list-item-file"
              href="https://cdn.xyz.com/aaa.png/xx.xx"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 48px; height: 48px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23.5 17L18.5 22L15 18.5L16.5 17L18.5 19L22 15.5L23.5 17M13.09 20H6V4H13V9H18V13.09C18.33 13.04 18.66 13 19 13S19.67 13.04 20 13.09V8L14 2H6C4.89 2 4 2.9 4 4V20C4 21.11 4.89 22 6 22H13.81C13.46 21.39 13.21 20.72 13.09 20Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa.png/xx.xx"
              rel="noopener noreferrer"
              target="_blank"
              title="not-image"
            >
              not-image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/xx.xx/aaa.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://cdn.xyz.com/xx.xx/aaa.png"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/xx.xx/aaa.png"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/xx.xx/aaa.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="data:image/png;base64,UEsDBAoAAAAAADYZYkwAAAAAAAAAAAAAAAAdAAk"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/xx.xx/aaa.png"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/xx.xx/aaa.png?query=123"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://cdn.xyz.com/xx.xx/aaa.png?query=123"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/xx.xx/aaa.png?query=123"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/xx.xx/aaa.png#anchor"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://cdn.xyz.com/xx.xx/aaa.png#anchor"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/xx.xx/aaa.png#anchor"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/xx.xx/aaa.png?query=some.query.with.dot"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://cdn.xyz.com/xx.xx/aaa.png?query=some.query.with.dot"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/xx.xx/aaa.png?query=some.query.with.dot"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://github.com/EightfoldAI/octuple/blob/main/public/assets/NewIssue.png@w_150%2ch_152"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://github.com/EightfoldAI/octuple/blob/main/public/assets/NewIssue.png@w_150%2ch_152"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://github.com/EightfoldAI/octuple/blob/main/public/assets/NewIssue.png@w_150%2ch_152"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
  </ul>
</span>
`;

exports[`Upload List should support removeIcon, replaceIcon, and downloadIcon 1`] = `
<span
  class=""
>
  <div
    class="upload upload-select"
  >
    <span
      class=""
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <ul
    class="upload-list upload-list-medium upload-list-picture"
  >
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-uploading upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <div
              class="upload-list-item-thumbnail"
            >
              <span
                class="upload-spin-icon icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 14px; height: 14px;"
                  viewBox="0 0 24 24"
                >
                  <style>
                    @keyframes spin { from { transform: rotate(0deg) } to { transform: rotate(360deg) } }
                  </style>
                  <g
                    style="animation: spin linear 0.4s infinite; transform-origin: center;"
                  >
                    <path
                      d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
                      style="fill: currentColor;"
                    />
                    <rect
                      fill="transparent"
                      height="24"
                      width="24"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://cdn.xyz.com/aaa"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Download file"
                class="icon-download button button-default button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
  </ul>
</span>
`;

exports[`Upload List should support removeIcon, replaceIcon, and downloadIcon 2`] = `
<span
  class=""
>
  <div
    class="upload upload-select"
  >
    <span
      class=""
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <ul
    class="upload-list upload-list-medium upload-list-picture"
  >
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-uploading upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <div
              class="upload-list-item-thumbnail"
            >
              <span
                class="upload-spin-icon icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 14px; height: 14px;"
                  viewBox="0 0 24 24"
                >
                  <style>
                    @keyframes spin { from { transform: rotate(0deg) } to { transform: rotate(360deg) } }
                  </style>
                  <g
                    style="animation: spin linear 0.4s infinite; transform-origin: center;"
                  >
                    <path
                      d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
                      style="fill: currentColor;"
                    />
                    <rect
                      fill="transparent"
                      height="24"
                      width="24"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://cdn.xyz.com/aaa"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            >
              <button
                aria-disabled="false"
                aria-label="Download file"
                class="icon-download button button-default button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-disabled="false"
                aria-label="Delete"
                class="icon-delete button button-default button-disruptive button-medium round-shape icon-left"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </li>
  </ul>
</span>
`;

exports[`Upload List should support showRemoveIconButton, showReplaceButton, and showPreviewIconButton 1`] = `
<span
  class=""
>
  <div
    class="upload upload-select"
  >
    <span
      class=""
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <ul
    class="upload-list upload-list-medium upload-list-picture"
  >
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-uploading upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <div
              class="upload-list-item-thumbnail"
            >
              <span
                class="upload-spin-icon icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 14px; height: 14px;"
                  viewBox="0 0 24 24"
                >
                  <style>
                    @keyframes spin { from { transform: rotate(0deg) } to { transform: rotate(360deg) } }
                  </style>
                  <g
                    style="animation: spin linear 0.4s infinite; transform-origin: center;"
                  >
                    <path
                      d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
                      style="fill: currentColor;"
                    />
                    <rect
                      fill="transparent"
                      height="24"
                      width="24"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            />
          </span>
        </div>
      </div>
    </li>
    <li
      class="upload-list-picture-container"
    >
      <div
        class="upload-list-item upload-list-item-done upload-list-item-list-type-picture"
      >
        <div
          class="upload-list-item-info"
        >
          <span
            class="upload-span"
          >
            <a
              class="upload-list-item-thumbnail"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="image"
                class="upload-list-item-image"
                src="https://cdn.xyz.com/aaa"
              />
            </a>
            <a
              class="upload-list-item-name"
              href="https://cdn.xyz.com/aaa"
              rel="noopener noreferrer"
              target="_blank"
              title="image"
            >
              image
            </a>
            <span
              class="upload-list-item-card-actions picture"
            />
          </span>
        </div>
      </div>
    </li>
  </ul>
</span>
`;
